<?xml version="1.0" encoding="utf-8"?>
<resources>
     
        <string name="app_name">Calculator</string>
        <string name="menu_settings">Settings</string>
        <string name="action_settings">Settings</string>
        <string name="button0">0</string>
        <string name="button1">1</string>
        <string name="button2">2</string>
        <string name="button3">3</string>
        <string name="button4">4</string>
        <string name="button5">5</string>
        <string name="button6">6</string>
        <string name="button7">7</string>
        <string name="button8">8</string>
        <string name="button9">9</string>
        <string name="buttonAdd">+</string>
        <string name="buttonSubtract">-</string>
        <string name="buttonMultiply">*</string>
        <string name="buttonDivide">/</string>
        <string name="buttonToggleSign">+/-</string>
        <string name="buttonDecimalPoint">.</string>
        <string name="buttonEquals">=</string>
        <string name="buttonClear">C</string>
        <string name="buttonClearMemory">MC</string>
        <string name="buttonAddToMemory">M+</string>
        <string name="buttonSubtractFromMemory">M-</string>
        <string name="buttonRecallMemory">MR</string>
        <string name="buttonSquareRoot">√</string>
        <string name="buttonSquared">x²</string>
        <string name="buttonInvert">1/x</string>
        <string name="buttonSine">sin</string>
        <string name="buttonCosine">cos</string>
        <string name="buttonTangent">tan</string>
    <string name="pow">Pow</string>
    <string name="rootSqr">√</string>
    <string name="rootcube">∛</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="paraopen">)</string>
    <string name="paraclose">(</string>
     
</resources>
