<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

   <EditText
       android:layout_width="fill_parent"
       android:layout_height="100dp"
       android:id="@+id/text"
       />

    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:id="@+id/buttonLeftParen" android:text="@string/paraclose" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonRightParen" android:text="@string/paraopen" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonBackspace" android:layout_weight="1" android:text="@string/b" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonClear" android:text="@string/c" android:layout_weight="1" android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:id="@+id/button7" android:text="@string/_7" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button8" android:text="@string/_8" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button9" android:text="@string/_9" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonPlus" android:text="@string/plus" android:layout_weight="1" android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:id="@+id/button4" android:text="@string/_4" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button5" android:text="@string/_5" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button6" android:text="@string/_6" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonMinus" android:text="@string/minus" android:layout_weight="1" android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/_1" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button2" android:text="@string/_2" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/button3" android:text="@string/_3" android:layout_weight="1" android:layout_width="fill_parent"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonTimes" android:text="@string/multiply" android:layout_weight="1" android:layout_width="fill_parent"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/button0" android:text="@string/_0"/>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/buttonDecimal" android:text="@string/decimal"/>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/buttonEquals" android:text="@string/equal"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonDivide" android:text="@string/divide" android:layout_width="fill_parent" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout6" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/buttonpercent" android:text="@string/percent"/>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/buttonCubeRoot" android:text="@string/rootcube"/>
        <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1" android:id="@+id/buttonSqrRoot" android:text="@string/rootSqr"/>
        <Button android:layout_height="wrap_content" android:id="@+id/buttonPow" android:text="@string/pow" android:layout_width="fill_parent" android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
